--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,7 +13,7 @@
     "country-state-city": "^3.2.1",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
-    "react-date-picker": "^10.5.2",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7"
