--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/hooks": "^7.2.1",
     "country-state-city": "^3.2.1",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
